Add range and point arguments to the mirror deployment
