# openapi/spec/schemas.yaml
@@ -109,6 +109,10 @@ components:
           type: string
         retentionTime:
           type: string # ISO-8601
+        point:
+          type: boolean
+        rangeField:
+          type: string
       required:
         - name
         - topicName
